# viebe_obj_cut

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  EXTfunction.cpp  EXTfunction.h  ImageUtils_0.7.cpp  Makefile  README.md  TOFaceTracker.cpp  TOFaceTracker.h  cmake_install.cmake  main  main.cpp  myVibe.cpp  myVibe.h  vibe.cpp  vibe.h
